# school-gpt-gateway

./: .clinerules  .cursorrules  .dockerignore  .env.cookie.example  .env.example  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  adapter_router.py  gateway.py  login_once.py  pyproject.toml  requirements.txt  school_gpt_adapter.py  school_gpt_cookie_adapter.py
.cursor/rules/: xjgpt-project.mdc
.github/: copilot-instructions.md
.github/workflows/: codex-check.yml  release.yml  test.yml
docs/: AI_ASSISTANT_TOOLS.md  CODEX.md  CODEX_QUICK_TASKS.md  CODEX_STATUS.md  COOKIE_HTTP_ADAPTER.md  COOKIE_TESTING.md  DEVELOPMENT_LOG.md  ENDPOINT_DISCOVERY.md  FRONTEND_API_SETTINGS.md  PACKAGING.md  RELEASE.md  WIKI.md
docs/wiki/: API-Reference.md  Architecture.md  Frontend-XJGPT.md  Home.md  Model-Selection.md  Packaging-and-Release.md  Quick-Start.md  Security-Boundary.md  Troubleshooting.md  _Sidebar.md
examples/: chat_request.example.json
scripts/: build_release.py  codex_check.sh  codex_setup.sh  start_gateway.ps1  start_pinggy_tunnel.ps1  start_pinggy_tunnel.py  start_serveo_tunnel.ps1  start_tunnel.ps1  sync_wiki.py  test_cookie_http_adapter.py  test_cookies.py
static/: app.js  index.html  styles.css
tests/: test_gateway.py
xjgpt_gateway/: __init__.py  cli.py  discover.py  login.py
