[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xjgpt-school-gateway"
version = "0.1.0"
description = "XJGPT gateway and ChatGPT-like frontend for an authorized school web-based GPT service."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "XJGPT Project" }
]
keywords = ["xjgpt", "ai-gateway", "fastapi", "playwright", "school-gpt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "playwright>=1.40.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
]

[project.scripts]
xjgpt-gateway = "xjgpt_gateway.cli:main"
xjgpt-login = "xjgpt_gateway.login:main"

[tool.setuptools]
py-modules = ["gateway", "school_gpt_adapter", "login_once"]
packages = ["xjgpt_gateway"]

[tool.setuptools.package-data]
xjgpt_gateway = ["py.typed"]
